# switch-fiji-server

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  celerybeat-schedule.db  pyproject.toml  sample_data.py  sample_data.txt  telemtry_data_sample.csv  upsertSync.py
app/: main.py
app/api/v1/admin/: routes.py
app/api/v1/auth/: routes.py
app/api/v1/client/: routes.py
app/api/v1/contract/: routes.py
app/api/v1/device/: routes.py  schema.py
app/api/v1/engineer/: routes.py  schema.py
app/api/v1/invoice/: routes.py
app/api/v1/jobrun/: routes.py
app/api/v1/misc/: routes.py
app/api/v1/settings/: routes.py
app/api/v1/site/: routes.py
app/core/: auth.py  billing.py  config.py  exceptions.py  logger.py  mail.py  middlewares.py  security.py  template_registry.py
app/core/telemetry/: base.py  ppa_off_grid.py  ppa_on_grid.py  ppa_on_grid_battery.py
app/database/: __init__.py  celery.py  dynamo.py  main.py  postgres.py  redis.py  s3.py  timestream.py
app/database/migrations/: env.py
app/jobs/: async_runner.py  auth.py  celery.py  invoice.py  shared.py  site_stats.py
app/jobs/billing/: engine.py  ppa_on_grid.py  ppa_on_grid_with_battery.py  repository.py  schema.py
app/jobs/contracts/: invoice.py  invoice_snapshot.py  shared.py
app/jobs/invoicing/: invoice.py  snapshot.py
app/jobs/sites/: stats.py
app/modules/billing/: base_contract_factory.py  engine.py  lease.py  ppa_off_grid.py  ppa_on_grid_no_battery.py  ppa_on_grid_with_battery.py  schema.py
app/modules/clients/: model.py  repository.py  schema.py
app/modules/contracts/: model.py  repository.py  schema.py
app/modules/contracts/wizard/: base.py  (+5 more)
app/modules/degradation_table/: model.py
app/modules/devices/: device_repository.py  model.py  schema.py
app/modules/invoices/: model.py  pdf.py  repository.py  schema.py
app/modules/job_run/: model.py  repository.py  schema.py
app/modules/panel_references/: model.py  repository.py  schema.py
app/modules/pv_degradation/: model.py  respository.py  schema.py
app/modules/pv_summary/: model.py  repository.py  schema.py
app/modules/settings/: model.py  repository.py  schema.py
app/modules/sites/: model.py  repository.py  schema.py
app/modules/string_wiring/: model.py  repository.py  schema.py
app/modules/users/: model.py  repository.py  schema.py
app/scripts/: seed.py  upsertSync.py
app/services/: client.py  contract.py  devices.py  engineer.py  invoice.py  job_run.py  misc.py  s3.py  settings.py  site_configs.py  sites.py  timestream.py  user.py
app/shared/: constants.py  mail.py  model.py  schema.py
app/static/css/: app.css  invoice.css
app/static/js/: app.js
app/tailwindcss/: package.json  pnpm-lock.yaml
app/templates/: email_app.py  email_header.html  email_index.html  email_preview.html  email_sidebar.html  email_verification.html  footer.html  header.html  layout.html  pwd_reset.html  sensitive_note.html  verify_login.html
app/templates/atoms/: button.html  token.html
app/templates/invoices/: invoice.html
app/templates/libs/: context.py
app/utils/: __init__.py  contracts.py  pagination.py  tz.py
(+64 files in other folders)
