[project]
name = "switch-fiji-server"
version = "0.1.0"
description = "The backend microservice server for switch fiji IoT project"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aioboto3>=15.5.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "backoff>=2.2.1",
    "bcrypt>=5.0.0",
    "celery>=5.6.2",
    "fastapi-cache2>=0.2.2",
    "fastapi-mail>=1.6.2",
    "fastapi-pagination>=0.15.10",
    "fastapi[standard]>=0.135.1",
    "flower>=2.0.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "pendulum>=3.2.0",
    "psycopg>=3.3.3",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "redbeat>=0.0.1",
    "redis>=7.3.0",
    "resend>=2.26.0",
    "sqlmodel>=0.0.37",
    "starlette-context>=0.5.1",
    "structlog>=25.5.0",
    "tzdata>=2026.2",
    "ulid-py>=1.1.0",
    "uvicorn>=0.42.0",
    "weasyprint>=68.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
    "pre-commit>=4.5.1",
]


[tool.ruff]
src = ["app"]
line-length = 120
target-version = "py314"
exclude = [".git", "__pycache__", ".venv", ".env"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
